--- a/home.html
+++ b/home.html
@@ -36,14 +36,15 @@
       }
 
       .logo img {
-        height: 500px;
+        height: 150px;
       }
 
       .container {
         display: flex;
         justify-content: space-between;
+        position: relative;
         width: 100%;
-        max-width: 1200px;
+        max-width: 1500px;
         flex-grow: 1;
         flex-direction: row;
       }
@@ -55,7 +56,7 @@
         justify-content: center;
         position: relative;
         width: 50%;
-        padding-left: 20px;
+        font-weight: 700;
       }
 
       h1:hover {
@@ -63,9 +64,10 @@
       }
 
       h1 {
-        font-size: 45px;
+        font-size: 50px;
         margin: 0;
         opacity: 0;
+        font-weight: 700;
         position: relative;
         display: flex;
         align-items: center;
@@ -75,7 +77,7 @@
       }
 
       .highlight {
-        color: rgb(255, 145, 11);
+        color: rgb(38, 54, 125);
         margin-right: 5px;
       }
 
@@ -84,6 +86,8 @@
         padding: 10px 20px;
         border-radius: 10px;
         color: rgb(38, 54, 125);
+        font-weight: 800;
+        background-color: rgba(149, 232, 255, 0.511);
       }
 
       @keyframes fadeInDiagonal {
@@ -103,19 +107,19 @@
       }
 
       .text-section h1:nth-child(2) {
-        margin-left: 30px;
+        margin-left: 100px;
         margin-bottom: 40px;
         animation-delay: 1s;
       }
 
       .text-section h1:nth-child(3) {
-        margin-left: 60px;
+        margin-left: 200px;
         margin-bottom: 40px;
         animation-delay: 1.5s;
       }
 
       .text-section h1:nth-child(4) {
-        margin-left: 90px;
+        margin-left: 300px;
         margin-bottom: 40px;
         animation-delay: 2s;
       }
@@ -123,11 +127,12 @@
       .button-section {
         display: flex;
         flex-direction: column;
-        flex: 1;
         justify-content: space-around;
         align-items: center;
         height: 300px;
         margin-top: 70px;
+        position: relative;
+        width: 50%;
       }
 
       .button-layer {
@@ -144,7 +149,7 @@
       .button-layer.spaced {
         justify-content: right;
         padding: 0 60px;
-        width: 800px;
+        width: 600px;
         margin-bottom: 50px;
       }
 
@@ -243,7 +248,7 @@
       }
 
       /* Media Query for smaller screens */
-      @media (max-width: 768px) {
+      @media (max-width: 800px) {
         .container {
           flex-direction: column; /* Stack the text and button sections vertically */
         }
@@ -284,7 +289,8 @@
       }
 
       .highlight {
-        color: rgb(255, 145, 11);
+        color: rgb(15, 0, 98);
+        font-weight: 700;
         margin-right: 5px;
       }
 
@@ -312,7 +318,7 @@
         transform: translateY(-50%);
         font-size: 50px;
         color: white;
-        cursor: pointer;
+        cursor: url("pointer.png"), auto;
         z-index: 100;
       }
 
@@ -324,14 +330,14 @@
         right: 10px;
       }
 
-      /* Loading screen */
+      /*Loading screen */
       .loading-screen {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100vh;
-        background-color: #000;
+        background-image: url(background/preloader.gif);
         z-index: 1000;
         display: flex;
         justify-content: center;
@@ -346,7 +352,7 @@
       }
 
       /* Media Query for smaller screens */
-      @media (max-width: 768px) {
+      @media (max-width: 800px) {
         .container {
           flex-direction: column;
         }
@@ -373,15 +379,22 @@
           padding: 0;
         }
       }
+      /*
+      .loading-screen {
+        background: darkblue url('background/preloader.gif') no-repeat center center;
+        height: 100vh;
+        width: 100%;
+        position: fixed;
+        z-index: 1000;
+      }
+        */
     </style>
   </head>
   <body>
-    <div class="loading-screen" id="loading-screen">
-      Loading...
-    </div>
+    <div class="loading-screen" id="loading-screen"></div>
 
     <div class="logo">
-      <img class="logoimg" src="toplogo.png" alt="Summit TECS Logo" />
+      <img class="logoimg" src="toplogo.png" alt="Summit TECS Logo">
     </div>
 
     <div class="container">
@@ -437,16 +450,24 @@
         "background/bg3.png",
         "background/bg4.png",
         "background/bg5.png",
-        "background/bg6.png"
+        "background/bg6.png",
+        "background/bg7.png",
+        "background/bg8.png",
+        "background/bg9.png",
+        "background/bg10.png"
       ];
 
       const specialTexts = [
-        "Welcome to Summit TECS",
-        "Innovative Engineering Solutions",
+        "Welcome to <br> Summit TECS",
+        "Innovative <br> Engineering <br> Solutions",
         "Building the Future",
         "Your Trusted Partner",
-        "Cutting-edge Technology",
-        "Excellence in Construction"
+        "Excellence in <br>  Construction",
+        "Cutting-edge <br> Technology",
+        "Problem solvers",
+        "Design fixer",
+        "Exelent partner",
+        "Life saver"
       ];
 
       let currentImageIndex = 0;
@@ -496,6 +517,7 @@
         updateBackground();
         setInterval(nextImage, 4000); // Change background every 4 seconds
       };
+      
     </script>
   </body>
 </html>
