--- a/contact-us.html
+++ b/contact-us.html
@@ -147,7 +147,7 @@
 </head>
 <body>
     <header>
-        <a href="home.html" class="back-button">Back</a> <!-- Back button positioned to the left -->
+        <a href="index.html" class="back-button">Back</a> <!-- Back button positioned to the left -->
         <div class="logo">
             <img src="logo.png" alt="Summit Tecs Logo">
         </div>
