--- a/index.html
+++ b/index.html
@@ -337,109 +337,6 @@
             color: #666;
             line-height: 1.6;
         }
-        /* Hamburger Menu */
-        .nav-menu {
-            position: fixed;
-            top: 10px;
-            right: 10px;
-            height: 50px;
-            width: 50px;
-            border-radius: 10px;
-            z-index: 10000;
-            cursor: url("pointer.png"), auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .nav-menu div {
-            width: 40px;
-            height: 40px;
-            margin: 2px;
-            position: fixed;
-            z-index: 10000;
-        }
-        .nav-menu span {
-            background-image: linear-gradient(rgb(255, 106, 0), rgb(255, 200, 0));
-            width: 80%;
-            height: 4px;
-            border-radius: 5px;
-            display: block;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            transition: transform 0.5s, width 0.5s;
-        }
-
-        .nav-menu .line1 {
-            transform: translate(-50%, -12px);
-        }
-        .nav-menu .line3 {
-            transform: translate(-50%, 8px);
-        }
-        .openmenu .line1 {
-            transform: translate(-50%, -50%) rotate(-45deg);
-        }
-        .openmenu .line3 {
-            transform: translate(-50%, -50%) rotate(45deg);
-        }
-        .openmenu .line2 {
-            width: 0;
-        }
-
-        /* Menu Styling */
-        .nav-btn-menu {
-            background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent */
-            width: 40%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            gap: 30px;
-            justify-content: center;
-            position: fixed;
-            z-index: 1000;
-            left: 100%;
-            transition: left 0.5s ease;
-            box-shadow: -4px 0 15px rgba(0, 0, 0, 0.2); /* Shadow for depth */
-        }
-
-        .nav-btn-menu button {
-            padding: 10px 20px;
-            border: none;
-            background: none;
-            color: #333;
-            font-size: 40px;
-            font-weight: 700;
-            font-family: "Roboto", sans-serif;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            transition: color 0.3s, transform 0.3s;
-            cursor: url('pointer.png'), auto;
-        }
-
-        .nav-btn-menu button:hover {
-            color: #FF8C00;
-            transform: scale(1.1); /* Scale on hover */
-        }
-
-        .trans-nav-btn-menu {
-            left: 80%;
-        }
-        @media (max-width: 1000px) {
-            .trans-nav-btn-menu {
-            left: 70%;
-        }
-        }
-        @media (max-width: 750px) {
-            .trans-nav-btn-menu {
-            left: 60%;
-        }
-        }
-        @media (max-width: 600px) {
-            .t5 {
-            margin-left: 300px;
-        }
-        }
     </style>
   </head>
   <body>
@@ -457,7 +354,7 @@
       </div>
     </header>
     <div class="imgDisplay"></div>
-    <div class="content">
+    <div class="content" id="content">
       <!-- New Section with Prominent Text -->
         <section class="intro-section">
           <p class="t1">When</p>
