--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <style>
+      html {
+          scroll-behavior: smooth;
+      }
+
       /* Reset and Base Styles */
       body {
         margin: 0;
@@ -97,7 +101,7 @@
         background-size: cover;
         background-position: center;
         z-index: 1;
-        transition: transform 0.5s ease;
+        transition: transform 1s ease-in-out;
       }
 
       .content {
@@ -187,12 +191,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #7a7a7a; /* Set a background color */
+        background-color: white; /* Set a background color */
       }
 
       .loading-screen img {
-        width: 100px; /* Adjust size of preloader image */
-        height: 100px;
+        width: 500px; /* Adjust size of preloader image */
       }
 
       .hidden {
@@ -463,7 +466,7 @@
         /* Hamburger Menu */
       .nav-menu {
             position: fixed;
-            top: 10px;
+            top: 17px;
             right: 10px;
             height: 50px;
             width: 50px;
@@ -559,6 +562,12 @@
           .right-buttons {
             display: none;
           }
+          .text-content p {
+            font-size: 0.8em;
+        }
+        .highlight {
+          font-size: 0.8em;
+        }
         }
        /* Core Values Container */
       .switching-container {
@@ -581,7 +590,7 @@
           padding: 20px;
           background: #f9f9f9;
           box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
-          border-radius: 50px 0 0 50px;
+          border-radius: 50px 0 50px 0;
           transition: all 0.6s ease;
           text-align: center;
           opacity: 0; /* Hidden by default */
@@ -646,7 +655,7 @@
           font-size: 1.5em;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
           padding: 17px 15px 15px 15px;
-          cursor: pointer;
+          cursor: url(pointer.png), auto;
           transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease;
           outline: none;
       }
@@ -826,7 +835,7 @@
                           <textarea id="message" name="message" rows="5" required></textarea>
                       </div>
 
-                      <button type="submit" class="send-btn">Send Message</button>
+                      <button type="submit" class="send-btn" style="cursor: url(pointer.png), auto;">Send Message</button>
                   </form>
               </div>
           </div>
@@ -1050,7 +1059,7 @@
         setInterval(() => {
           const newIndex = (currentIndex + 1) % containers.length;
             updateActiveValue(newIndex);
-        } , 3000);
+        } , 5000);
 
         // Initialize position for all containers
         function initializeValues() {
