--- a/index.html
+++ b/index.html
@@ -1018,6 +1018,12 @@
         document.getElementById("buttoni").addEventListener("click", function () {
             window.location.href = "index.html";
         });
+        document.getElementById("buttoniiiii").addEventListener("click", function () {
+            window.location.href = "servises.html";
+        });
+        document.getElementById("buttonthreedotfive").addEventListener("click", function () {
+            window.location.href = "servises.html";
+        });
 
 
         document.getElementById("buttonthree").addEventListener("click", function () {
