--- a/partners.html
+++ b/partners.html
@@ -301,8 +301,8 @@
         document.getElementById("buttoni").addEventListener("click", function () {
             window.location.href = "index.html";
         });
-        document.getElementById("buttoniiii").addEventListener("click", function () {
-            window.location.href = "projects.html";
+        document.getElementById("buttoniiiii").addEventListener("click", function () {
+            window.location.href = "servises.html";
         });
         document.getElementById("buttonii").addEventListener("click", function () {
             window.location.href = "index.html#content";
