--- a/servises.html
+++ b/servises.html
@@ -6,109 +6,253 @@
   <title>Our Services</title>
   <style>
     /* General Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-}
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+    }
 
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: 0 auto;
-  text-align: center;
-}
+    /* Header Section */
+    header {
+      background: linear-gradient(to right, #00498F, #FF6D1A);
+      padding: 60px 20px;
+      color: white;
+      text-align: center;
+    }
 
-/* Header Section */
-header {
-  background: linear-gradient(to right, #00498F, #FF6D1A);
-  color: white;
-  padding: 20px 0;
-}
+    .logo {
+      width: 200px;
+      display: block;
+      margin: 0 auto 20px;
+    }
 
-header .logo {
-  width: 150px;
-  display: block;
-  margin: 0 auto 10px;
-}
+    header h1 {
+      font-size: 4rem;
+      font-weight: bold;
+      color: #FF6D1A;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+    }
 
-header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 15px;
-}
+    header p {
+      font-size: 1.5rem;
+      line-height: 1.8;
+      margin-top: 20px;
+      color: #f9f9f9;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-header p {
-  font-size: 1rem;
-}
+    /* Services Section */
+    .services {
+      padding: 60px 20px;
+      background: #fff;
+    }
 
-/* Services Section */
-.services {
-  background-color: #f5f5f5;
-  padding: 40px 0;
-}
+    .services h2 {
+      font-size: 2.5rem;
+      color: #00498F;
+      text-align: center;
+      margin-bottom: 40px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    }
 
-.services h2 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-  color: #00498F;
-}
+    .services-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 30px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
 
-.services-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-}
+    .service-item {
+      background: #00498F;
+      color: white;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      font-size: 1.5rem;
+      position: relative;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
 
-.service-card {
-  background: #00498F;
-  color: white;
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-  font-size: 1rem;
-  text-align: center;
-}
+    .service-item:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    }
 
-.service-card:hover {
-  transform: translateY(-5px);
-  background: #FF6D1A;
-}
+    .service-item:before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -20px;
+      transform: translateY(-50%);
+      width: 20px;
+      height: 20px;
+      clip-path: polygon(0 0, 100% 50%, 0 100%);
+      background: #FF6D1A;
+    }
 
+    .service-item span {
+      display: block;
+      margin-top: 10px;
+      font-size: 1rem;
+      font-style: italic;
+    }
+    /* Navigation Menu Styling */
+    .nav-menu {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      height: 50px;
+      width: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: rgba(255, 255, 255, 0.1);
+      z-index: 1000;
+      cursor: pointer;
+    }
+
+    .nav-menu span {
+      display: block;
+      background: #fff;
+      width: 30px;
+      height: 4px;
+      margin: 6px 0;
+      transition: all 0.5s;
+    }
+
+    .openmenu span:nth-child(1) {
+      transform: rotate(45deg) translate(6px, 6px);
+    }
+
+    .openmenu span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .openmenu span:nth-child(3) {
+      transform: rotate(-45deg) translate(6px, -6px);
+    }
+
+    .nav-btn-menu {
+      position: fixed;
+      top: 0;
+      left: 100%;
+      width: 40%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.9);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      transition: left 0.5s ease;
+      z-index: 900;
+    }
+
+    .trans-nav-btn-menu {
+      left: 60%;
+      z-index: 999;
+    }
+
+    .nav-btn-menu button {
+      background: none;
+      border: none;
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      margin: 15px 0;
+      padding: 10px 20px;
+      cursor: pointer;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+      transition: transform 0.3s, color 0.3s;
+    }
+
+    .nav-btn-menu button:hover {
+      transform: scale(1.1);
+      color: #ffa500;
+    }
   </style>
 </head>
 <body>
+  <!-- Navigation Menu -->
+  <div class="nav-menu">
+    <div>
+        <span class="line1"></span>
+        <span class="line2"></span>
+        <span class="line3"></span>
+    </div>
+  </div>
+  <div class="nav-btn-menu">
+    <button id="buttoni">•Home</button>
+    <button id="buttoniiiii">•Partners</button>
+    <button id="buttoniiii">•Projects</button>
+    <button id="buttonii">•About-us</button>
+    <button id="buttoniiiiii">•Contact-us</button>
+  </div>
   <!-- Header Section -->
   <header>
-    <div class="container">
-      <img src="logoname.png" alt="Logo" class="logo">
-      <h1>Our Services</h1>
-      <p>We offer comprehensive engineering and construction solutions for electromechanical works across various sectors, including commercial, administrative, residential, and presidential buildings, restaurants, factories (with a focus on pharmaceutical plants), hospitals, airports, and farms.</p>
-    </div>
+    <img src="logoname.png" alt="Logo" class="logo">
+    <h1>OUR SERVICES</h1>
+    <p>
+      We offer comprehensive engineering and construction solutions for electromechanical works across various sectors, including commercial, administrative, residential, and presidential buildings, restaurants, factories (with a focus on pharmaceutical plants), hospitals, airports, and farms.
+    </p>
   </header>
 
   <!-- Services Section -->
   <section class="services">
-    <div class="container">
-      <h2>Our services encompass the following trades:</h2>
-      <div class="services-grid">
-        <div class="service-card">Central air conditioning systems<br>(chilled water, VRF, and DX)</div>
-        <div class="service-card">Plumbing</div>
-        <div class="service-card">Firefighting systems</div>
-        <div class="service-card">Electrical works<br>(power, lighting, and low current)</div>
-        <div class="service-card">Smart home technologies</div>
-        <div class="service-card">Steam systems</div>
-        <div class="service-card">Compressed air systems</div>
-        <div class="service-card">Heating systems</div>
-        <div class="service-card">Swimming pools</div>
-        <div class="service-card">Medical gas systems</div>
+    <h2>Our services encompass the following trades:</h2>
+    <div class="services-grid">
+      <div class="service-item">
+        Central air conditioning systems
+        <span>(chilled water, VRF, and DX)</span>
       </div>
+      <div class="service-item">Plumbing</div>
+      <div class="service-item">Firefighting systems</div>
+      <div class="service-item">
+        Electrical works
+        <span>(power, lighting, and low current)</span>
+      </div>
+      <div class="service-item">Smart home technologies</div>
+      <div class="service-item">Steam systems</div>
+      <div class="service-item">Compressed air systems</div>
+      <div class="service-item">Heating systems</div>
+      <div class="service-item">Swimming pools</div>
+      <div class="service-item">Medical gas systems</div>
     </div>
   </section>
+  <script>
+    const menu = document.querySelector('.nav-menu');
+    const menuBtn = document.querySelector('.nav-btn-menu');
+    menu.addEventListener('click', () => {
+      menu.classList.toggle('openmenu');
+      menuBtn.classList.toggle('trans-nav-btn-menu');
+    });
+
+    document.getElementById("buttoniiii").addEventListener("click", function () {
+            window.location.href = "projects.html";
+        });
+        document.getElementById("buttoni").addEventListener("click", function () {
+            window.location.href = "index.html";
+        });
+        document.getElementById("buttoniiiii").addEventListener("click", function () {
+            window.location.href = "partners.html";
+        });
+        document.getElementById("buttonii").addEventListener("click", function () {
+            window.location.href = "index.html#content";
+        });
+
+        document.getElementById("buttoniiiiii").addEventListener("click", function () {
+            window.location.href = "index.html#final";
+        });
+  </script>
 </body>
 </html>
